tests/snapshots/generated_from_inputs__good_mod.snap
---
source: tests/fixtures.rs
description: "// Author: Tomasz Wysocki 277696\nint main() {\n    printInt(5 % 3);\n    printInt(-5 % 3); // -2 - sic!\n    return 0;\n}\n"
input_file: inputs/good/mod.lat
---
; ModuleID = 'mod'
source_filename = "mod"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @main() {
b0:
  call void @printInt(i32 2)
  call void @printInt(i32 -2)
  ret i32 0
}

