tests/snapshots/generated_from_inputs__good_negation.snap
---
source: tests/fixtures.rs
description: "// Author: Tomasz Wysocki 277696\nint main() {\n    printInt(- -1);\n    int i = 1;\n    printInt(-i);\n    printInt(2 - -i);\n    return 0;\n}\n"
input_file: inputs/good/negation.lat
---
; ModuleID = 'negation'
source_filename = "negation"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @main() {
b0:
  call void @printInt(i32 1)
  call void @printInt(i32 -1)
  call void @printInt(i32 3)
  ret i32 0
}

