tests/snapshots/generated_from_inputs__good_nested_block_return.snap
---
source: tests/fixtures.rs
description: "int main() {\n    {\n        int x = 5;\n        return 0;\n    }\n}"
input_file: inputs/good/nested_block_return.lat
---
; ModuleID = 'nested_block_return'
source_filename = "nested_block_return"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @main() {
b0:
  ret i32 0
}

