tests/snapshots/generated_from_inputs__good_print_complicated_string.snap
---
source: tests/fixtures.rs
description: "// Autor: Tomasz Wysocki 277696\nint main() {\n    printString(\"\\\\a\\\\n\\n\\tb\\\"\");\n    return 0;\n}\n"
input_file: inputs/good/print_complicated_string.lat
---
; ModuleID = 'print_complicated_string'
source_filename = "print_complicated_string"

%string = type { i8*, i32 }

@latte.str.0 = private constant [8 x i8] c"\\a\\n\0A\09b\22"

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @main() {
b0:
  %new_string = call %string* @newString(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @latte.str.0, i32 0, i32 0), i32 8)
  call void @printString(%string* %new_string)
  ret i32 0
}

