tests/snapshots/generated_from_inputs__good_print_int.snap
---
source: tests/fixtures.rs
description: "// Autor: Tomasz Wysocki 277696\nint main() {\n    printInt(1);\n    return 0;\n}\n"
input_file: inputs/good/print_int.lat
---
; ModuleID = 'print_int'
source_filename = "print_int"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @main() {
b0:
  call void @printInt(i32 1)
  ret i32 0
}

