tests/snapshots/generated_from_inputs__good_scopes.snap
---
source: tests/fixtures.rs
description: "// Author: Tomasz Wysocki 277696\nint main() {\n    int i = 0;\n    printInt(i);\n    {\n        int i = 1;\n        printInt(i);\n    }\n    printInt(i);\n    {\n        int i = 2;\n        printInt(i);\n    }\n    printInt(i);\n    return 0;\n}\n"
input_file: inputs/good/scopes.lat
---
; ModuleID = 'scopes'
source_filename = "scopes"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @main() {
b0:
  call void @printInt(i32 0)
  call void @printInt(i32 1)
  call void @printInt(i32 0)
  call void @printInt(i32 2)
  call void @printInt(i32 0)
  ret i32 0
}

