tests/snapshots/generated_from_inputs__good_string_equality.snap
---
source: tests/fixtures.rs
description: "int main() {\n    string test = \"test\";\n    string test2 = \"test\";\n    string test3 = \"blah\";\n    \n    if (test == test2) {\n        printString(\"test == test2\");\n    }\n    if (test != test3) {\n        printString(\"test != test3\");\n    }\n    return 0;\n}"
input_file: inputs/good/string_equality.lat
---
; ModuleID = 'string_equality'
source_filename = "string_equality"

%string = type { i8*, i32 }

@latte.str.0 = private constant [4 x i8] c"test"
@latte.str.1 = private constant [4 x i8] c"blah"
@latte.str.2 = private constant [13 x i8] c"test == test2"
@latte.str.3 = private constant [13 x i8] c"test != test3"

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @main() {
b0:
  %new_string = call %string* @newString(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @latte.str.0, i32 0, i32 0), i32 4)
  %new_string1 = call %string* @newString(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @latte.str.1, i32 0, i32 0), i32 4)
  %strings_equal = call i32 @stringEqual(%string* %new_string, %string* %new_string)
  %v3 = icmp ne i32 %strings_equal, 0
  br i1 %v3, label %b1, label %b2

b1:                                               ; preds = %b0
  %new_string2 = call %string* @newString(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @latte.str.2, i32 0, i32 0), i32 13)
  call void @printString(%string* %new_string2)
  br label %b2

b2:                                               ; preds = %b1, %b0
  %strings_equal3 = call i32 @stringEqual(%string* %new_string, %string* %new_string1)
  %v8 = icmp eq i32 %strings_equal3, 0
  br i1 %v8, label %b3, label %b4

b3:                                               ; preds = %b2
  %new_string4 = call %string* @newString(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @latte.str.3, i32 0, i32 0), i32 13)
  call void @printString(%string* %new_string4)
  br label %b4

b4:                                               ; preds = %b3, %b2
  ret i32 0
}

