tests/snapshots/generated_from_inputs__good_string_ops.snap
---
source: tests/fixtures.rs
description: "string add(string a, string b) {\n    return a + b;\n}\n\nint main() {\n    int i = 3;\n    string s = \"Hello\";\n    while (i > 0) {\n        s = add(s, \"!\");\n        i--;\n    }\n    printString(s);\n    return 0;\n}"
input_file: inputs/good/string_ops.lat
---
; ModuleID = 'string_ops'
source_filename = "string_ops"

%string = type { i8*, i32 }

@latte.str.0 = private constant [5 x i8] c"Hello"
@latte.str.1 = private constant [1 x i8] c"!"

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define %string* @latte_user_add(%string* %0, %string* %1) {
b0:
  %new_string = call %string* @stringConcat(%string* %0, %string* %1)
  ret %string* %new_string
}

define i32 @main() {
b0:
  %new_string = call %string* @newString(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @latte.str.0, i32 0, i32 0), i32 5)
  br label %b1

b1:                                               ; preds = %b3, %b0
  %v2 = phi i32 [ 3, %b0 ], [ %v9, %b3 ]
  %v5 = phi %string* [ %new_string, %b0 ], [ %latte_user_add, %b3 ]
  %v4 = icmp sgt i32 %v2, 0
  br i1 %v4, label %b3, label %b2

b2:                                               ; preds = %b1
  call void @printString(%string* %v5)
  ret i32 0

b3:                                               ; preds = %b1
  %new_string1 = call %string* @newString(i8* getelementptr inbounds ([1 x i8], [1 x i8]* @latte.str.1, i32 0, i32 0), i32 1)
  %latte_user_add = call %string* @latte_user_add(%string* %v5, %string* %new_string1)
  %v9 = sub i32 %v2, 1
  br label %b1
}

